[package]
name = "megenginelite-derive"
version = "0.1.0"
edition = "2018"
license-file = "../LICENSE"
description = "A safe megenginelite wrapper in Rust"
documentation = "https://docs.rs/megenginelite-derive"
readme = "../README.md"
repository = "https://github.com/MegEngine/megenginelite-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "1"
proc-macro2 = {version ="1"}

[dev-dependencies]
megenginelite-rs={path="../megenginelite-rs"}
