[package]
name = "megenginelite-rs"
version="1.7.0-1"
edition = "2018"
license = "Apache-2.0"
description = "A safe megenginelite wrapper in Rust"
documentation = "https://docs.rs/megenginelite-rs"
readme = "../README.md"
repository = "https://github.com/MegEngine/megenginelite-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
megenginelite-sys = "1.7.0-1"
megenginelite-derive = "0.1.0"
atomic-waker = "1"
