[package]
name = "megenginelite-sys"
version="1.8.2"
edition = "2018"
license = "Apache-2.0"
description = "A safe megenginelite wrapper in Rust"
documentation = "https://docs.rs/megenginelite-sys"
readme = "../README.md"
repository = "https://github.com/MegEngine/megenginelite-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7"

[build-dependencies]
bindgen = "0.59"
whoami = "1"
